--- a/src/app/tab-news-feed/tab-news-feed.page.html
+++ b/src/app/tab-news-feed/tab-news-feed.page.html
@@ -3,9 +3,12 @@
     <ion-toolbar color="mango">
       <ion-title>
         <ion-icon name="newspaper-outline"></ion-icon> News Feed
+        <ion-icon [name]="isNotification === true ? 'mail-unread-outline' : 'mail-outline'" style="float:right"
+          routerLink="/menu/inbox" routerDirection="root">
+        </ion-icon>
       </ion-title>
     </ion-toolbar>
-    
+
   </div>
 
 
@@ -15,11 +18,8 @@
 
 
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" mode="ios">
-    <ion-refresher-content
-      pullingIcon="chevron-down-circle-outline"
-      pullingText="Pull to refresh"
-      refreshingSpinner="circles"
-      refreshingText="Refreshing...">
+    <ion-refresher-content pullingIcon="chevron-down-circle-outline" pullingText="Pull to refresh"
+      refreshingSpinner="circles" refreshingText="Refreshing...">
     </ion-refresher-content>
   </ion-refresher>
 
@@ -28,28 +28,29 @@
     <ion-row>
       <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4">
         <div *ngFor="let x of newsfeed">
-        <ion-card (click)="showaddmodal1(x)" *ngIf="x.visibility" mode="ios">
-          <!--img  *ngIf="x.imageUrl != ''" src="{{x.imageUrl}}" style="width: auto; height: auto;width: 100%;max-height: 200px" />
+          <ion-card (click)="showaddmodal1(x)" *ngIf="x.visibility" mode="ios">
+            <!--img  *ngIf="x.imageUrl != ''" src="{{x.imageUrl}}" style="width: auto; height: auto;width: 100%;max-height: 200px" />
           <div class="rect-img-container"  *ngIf="x.imageUrl != ''">
             <img class="rect-img" src="{{x.imageUrl}}" alt="">
           </div-->
 
 
-          <div *ngIf="x.imageUrl != ''" class="use-cover-background square" style="background-image: url({{x.imageUrl}})"></div>
+            <div *ngIf="x.imageUrl != ''" class="use-cover-background square"
+              style="background-image: url({{x.imageUrl}})"></div>
 
-          <ion-card-header>
-            <ion-card-title class="ion-text-wrap">{{x.title}}</ion-card-title>
-          </ion-card-header>
-          <ion-card-content>
+            <ion-card-header>
+              <ion-card-title class="ion-text-wrap">{{x.title}}</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
 
-            <p [innerHTML]="x.contentShortDesc"></p>
-            
-          </ion-card-content>
-        </ion-card>
+              <p [innerHTML]="x.contentShortDesc"></p>
+
+            </ion-card-content>
+          </ion-card>
         </div>
-       
+
       </ion-col>
-    </ion-row>        
+    </ion-row>
   </ion-grid>
 </ion-content>
 <!--ion-content class="ion-padding" color="light">  
@@ -62,4 +63,4 @@
       loadingText="Loading more data...">  
     </ion-infinite-scroll-content>  
   </ion-infinite-scroll>  
-</ion-content-->  
+</ion-content-->
