made final diagnosis to full text, added approved date on final diagnosis

--- a/src/app/chh-web-components/chh-app-final-diagnosis/chh-app-final-diagnosis.component.html
+++ b/src/app/chh-web-components/chh-app-final-diagnosis/chh-app-final-diagnosis.component.html
@@ -25,6 +25,7 @@
   <ion-footer *ngIf="isCancelFinalDiagnosisApproval =='RA'">
     <ion-row>
       <ion-col>
+        <ion-text style="font-size: 12px;">Approved on : {{approvedDate}}</ion-text>
 
       </ion-col>
       <ion-col>
