--- a/src/app/pages/doctors-information/inbox/inbox.page.html
+++ b/src/app/pages/doctors-information/inbox/inbox.page.html
@@ -1,4 +1,4 @@
-<ion-header mode="md" class="ion-no-border">
+<ion-header mode="md" class="ion-no-border" *ngIf="!isDesktop">
   <div>
     <ion-toolbar color="mango">
       <ion-title>
