--- a/src/app/pages/doctors-information/inbox/inbox.page.html
+++ b/src/app/pages/doctors-information/inbox/inbox.page.html
@@ -98,8 +98,8 @@
 
                   </ion-col>
                   <ion-col>
-                    <ion-button size="small" color="mango" shape="round" expand="block"
-                      (click)="approvePendingAPproval(x.discharge_no)">Approve</ion-button>
+                    <ion-button size="small" color="mango" shape="round" expand="block" (click)="presentActionSheet(x)">
+                      Approve</ion-button>
                   </ion-col>
                 </ion-row>
               </ion-footer>
