fixed angular warning on reactiveform containing ngmodel

--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -100,13 +100,13 @@
 
 
 
-
+      <!-- find here-->
 
 
       <ion-item lines="none" [formGroup]="form">
         <ion-label>&#8369; </ion-label>
         <ion-input color="danger" formControlName="InsurancePF" id="InsurancePF" type="number" class="form-control"
-          (ionChange)="isurancePFchange()" [(ngModel)]="InsurancePF" value="0"></ion-input>
+          (ionChange)="isurancePFchange()" value="0"></ion-input>
       </ion-item>
 
 
@@ -337,7 +337,7 @@ ______                         ______   _   _   _____   _____
       <ion-item lines="none" [formGroup]="form">
         <ion-label>&#8369; </ion-label>
         <ion-input color="danger" formControlName="PersonalPhilhealthPF" id="PersonalPhilhealthPF" type="number"
-          class="form-control" (ionChange)="personalPhilhealthChange()" [(ngModel)]="PersonalPhilhealthPF" value="0">
+          class="form-control" (ionChange)="personalPhilhealthChange()" value="0">
         </ion-input>
       </ion-item>
 
@@ -617,7 +617,7 @@ ______          _    _
                   <ion-item lines="none" [formGroup]="form">
                     <ion-label>&#8369; </ion-label>
                     <ion-input color="danger" formControlName="InsurancePF" id="InsurancePF" type="number"
-                      class="form-control" (ionChange)="isurancePFchange()" [(ngModel)]="InsurancePF" value="0">
+                      class="form-control" (ionChange)="isurancePFchange()" value="0">
                     </ion-input>
                   </ion-item>
 
@@ -835,8 +835,7 @@ ______                         ______   _   _   _____   _____
                   <ion-item lines="none" [formGroup]="form">
                     <ion-label>&#8369; </ion-label>
                     <ion-input color="danger" formControlName="PersonalPhilhealthPF" id="PersonalPhilhealthPF"
-                      type="number" class="form-control" (ionChange)="personalPhilhealthChange()"
-                      [(ngModel)]="PersonalPhilhealthPF" value="0">
+                      type="number" class="form-control" (ionChange)="personalPhilhealthChange()" value="0">
                     </ion-input>
                   </ion-item>
 
