--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -567,7 +567,7 @@ ______          _    _
       <ion-col size-lg="2" size-md="12"></ion-col>
       <ion-col size-lg="3" size-md="6">
         <app-chh-app-patient-header [data]="data" [dateAdmitted]="dateAdmitted" [is_pwd]="is_pwd"
-          [is_senior]="is_senior"></app-chh-app-patient-header>
+          [is_senior]="is_senior" [forMoreOrLess]="true"></app-chh-app-patient-header>
       </ion-col>
 
       <ion-col size-lg="4" size-md="6">
