--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
@@ -82,6 +82,7 @@ ______             _     _                        _   _                   _
   <div *ngIf="ifShowSummary == true">
 
 
+
     <ion-grid>
       <ion-row>
         <ion-col size="8" offset="2">
@@ -98,180 +99,31 @@ ______             _     _                        _   _                   _
 
 
 
-    <ion-item lines="none" class="ion-no-margin"><b>Patient Details</b>
+    <pfSummaryPxInfo [data]="data" [site]="site" [is_pwd]="is_pwd" [is_senior]="is_senior" [dateAdmitted]="dateAdmitted"
+      [data1]="data1" [withVat]="withVat" [payvenueTxt]="payvenueTxt">
+    </pfSummaryPxInfo>
 
-      <ion-badge color="warning" slot="end" (click)="moreorless(true)" *ngIf="moreOrLess">
-        <ion-icon name="chevron-down-outline"></ion-icon>
-      </ion-badge>
-      <ion-badge color="warning" slot="end" (click)="moreorless(false)" *ngIf="!moreOrLess">
-        <ion-icon name="chevron-up-outline"></ion-icon>
-      </ion-badge>
-    </ion-item>
-    <ion-item class="ion-no-margin" *ngIf="!moreOrLess">
-      <ion-grid *ngFor="let x of data">
-        <ion-row>
-          <ion-col size="5"><b>Name:</b> </ion-col>
-          <ion-col size="7"><b>{{x.first_name}} {{x.middle_name}}. {{x.last_name}}</b></ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col size="5">Hospital Site:</ion-col>
-          <ion-col size="7">{{site}}</ion-col>
-        </ion-row>
-        <ion-row *ngIf="is_pwd !='N' && is_senior!='N'">
-          <ion-col>
-            <span *ngIf="is_pwd !='N'">PWD</span>
-            <span *ngIf="is_pwd !='N' && is_senior!='N'">,</span>
-            <span *ngIf="is_senior !='N'">Senior</span>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col size="5"> Room:</ion-col>
-          <ion-col size="7">{{x.room_no}}</ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col size="5">Admission Date:</ion-col>
-          <ion-col size="7">{{dateAdmitted}}</ion-col>
-        </ion-row>
-        <!-- <ion-row>
-          <ion-col size="5">Managed this patient for:</ion-col>
-          <ion-col size="7">{{daysManaged}} {{day}}</ion-col>
-        </ion-row> -->
-      </ion-grid>
-    </ion-item>
-    <ion-item class="ion-no-margin" *ngIf="moreOrLess">
-      <ion-grid *ngFor="let x of data">
-        <ion-row>
-          <ion-col size="5"><b>Name:</b> </ion-col>
-          <ion-col size="7"><b>{{x.first_name}} {{x.middle_name}}. {{x.last_name}}</b></ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col size="12">{{site}} | {{x.room_no}}</ion-col>
-        </ion-row>
-      </ion-grid>
-    </ion-item>
-    <ion-item class="ion-no-margin">
-      <ion-grid>
-        <ion-row>
-          <ion-col size="5">
-            <b>
-              <ion-text color="danger">Amount:</ion-text>
-            </b>
-          </ion-col>
-          <ion-col size="7">
-            <b>
-              <ion-text color="danger">&#8369; {{data1 | number}} {{withVat}}</ion-text>
-            </b>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col size="5">Pay Venue: </ion-col>
-          <ion-col size="7">
-            <ion-badge>{{payvenueTxt}}</ion-badge>
-          </ion-col>
-        </ion-row>
-        <!-- <ion-row>
-          <ion-col size="5">Add VAT?: </ion-col>
-          <ion-col size="7">{{withVat}}</ion-col>
-        </ion-row> -->
-      </ion-grid>
-    </ion-item>
+    <pfsummary [payvenueN]="payvenueN" [data1]="data1" [withVatN]="withVatN"></pfsummary>
 
-    <ul *ngIf="payvenueN == 'X' && data1 <= 0">
-      <li class="lineheight-80">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Amenable to Insurance (HMO) and PhilHealth rates.
-        </ion-text>
-      </li>
-      <li class="lineheight-80  paddingtop-10">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth </ion-text>
-      </li>
-    </ul>
-    <ul *ngIf="payvenueN == 'X' && data1 > 0">
-      <li class="lineheight-80">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Insurance (HMO) and PhilHealth coverage
-          applies.</ion-text>
-      </li>
-      <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Only the excess amount of <b>&#8369;{{data1 | number}}</b>
-          {{withVat}} will be collected from your patient.</ion-text>
-      </li>
-      <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth +
-          <b>&#8369;{{data1 | number}}</b> {{withVat}}
-        </ion-text>
-      </li>
-      <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Only the excess amount of <b>&#8369;{{data1 | number}}</b>
-          will be collected from your patient.</ion-text>
-      </li>
-      <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth +
-          <b>&#8369;{{data1 | number}}</b>
-        </ion-text>
-      </li>
-      <li class="lineheight-80  paddingtop-10">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Please note that actual receivable amount may vary after
-          final computations from Accounting.</ion-text>
-      </li>
-    </ul>
-
-    <ul *ngIf="payvenueN == 'H' && data1 > 0">
-
-      <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Total amount of <b>&#8369;{{data1 | number}}</b>
-          {{withVat}} will be collected from your patient.</ion-text>
-      </li>
-      <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: <b>&#8369;{{data1 | number}}</b> {{withVat}} +
-          PhilHealth</ion-text>
-      </li>
-      <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Total amount of <b>&#8369;{{data1 | number}}</b> will be
-          collected from your patient.</ion-text>
-      </li>
-      <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: <b>&#8369;{{data1 | number}}</b> + PhilHealth
-        </ion-text>
-      </li>
-      <li class="lineheight-80  paddingtop-10">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Please note that actual receivable amount may vary after
-          final computations from Accounting. </ion-text>
-      </li>
-    </ul>
-
-
-    <ul *ngIf="payvenueN == 'W'">
-      <li class="lineheight-80">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Amenable to PhilHealth rates.</ion-text>
-      </li>
-      <li class="lineheight-80  paddingtop-10">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Receivable: PhilHealth </ion-text>
-      </li>
-    </ul>
-    <ul *ngIf="payvenueN == 'N'">
-      <li class="lineheight-80">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Patient was not seen so no professional fee will be
-          collected from this patient.</ion-text>
-      </li>
-    </ul>
-    <ul *ngIf="payvenueN == 'A'">
-      <li class="lineheight-80">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">As an insurance coordinator you will receive a
-          coordinator's fee.</ion-text>
-      </li>
-      <li class="lineheight-80">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">No professional fee will be collected from this patient.
-        </ion-text>
-      </li>
-    </ul>
-    <ul *ngIf="payvenueN == 'xyz'">
-      <li class="lineheight-80">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Receivable: PhilHealth (if patient is a member)</ion-text>
-      </li>
-    </ul>
   </div>
+  <!--
 
+
+  ______           _    _____ _                      _____                                            
+ |  ____|         | |  / ____| |                    / ____|                                           
+ | |__   _ __   __| | | (___ | |__   _____      __ | (___  _   _ _ __ ___  _ __ ___   __ _ _ __ _   _ 
+ |  __| | '_ \ / _` |  \___ \| '_ \ / _ \ \ /\ / /  \___ \| | | | '_ ` _ \| '_ ` _ \ / _` | '__| | | |
+ | |____| | | | (_| |  ____) | | | | (_) \ V  V /   ____) | |_| | | | | | | | | | | | (_| | |  | |_| |
+ |______|_| |_|\__,_| |_____/|_| |_|\___/ \_/\_/   |_____/ \__,_|_| |_| |_|_| |_| |_|\__,_|_|   \__, |
+                                                                                                 __/ |
+                                                                                                |___/ 
+
+
+
+-->
   <div *ngIf="ifShowSummary == false">
-    <app-chh-app-patient-header [data]="data" [dateAdmitted]="dateAdmitted" [is_pwd]="is_pwd" [is_senior]="is_senior">
+    <app-chh-app-patient-header [data]="data" [dateAdmitted]="dateAdmitted" [forMoreOrLess]="true" [is_pwd]="is_pwd"
+      [is_senior]="is_senior">
     </app-chh-app-patient-header>
     <ion-card mode="ios" [disabled]="!areyouaninsurancecoordinator">
       <ion-item lines="none">
@@ -455,8 +307,8 @@ ______             _     _                       ______             _
     <ion-row>
       <ion-col size-lg="1" size-md="12"></ion-col>
       <ion-col size-lg="3" size-md="6">
-        <app-chh-app-patient-header [data]="data" [dateAdmitted]="dateAdmitted" *ngIf="!ifShowSummary" [is_pwd]="is_pwd"
-          [is_senior]="is_senior">
+        <app-chh-app-patient-header [forMoreOrLess]="true" [data]="data" [dateAdmitted]="dateAdmitted"
+          *ngIf="!ifShowSummary" [is_pwd]="is_pwd" [is_senior]="is_senior">
         </app-chh-app-patient-header>
         <div *ngIf="ifShowSummary == true">
 
@@ -474,173 +326,31 @@ ______             _     _                       ______             _
         </div>
       </ion-col>
       <ion-col size-lg="4" size-md="6">
+
         <div *ngIf="ifShowSummary == true">
 
-          <!-- <ion-grid class="ion-no-padding">
-            <ion-row>
-              <ion-col size="8" offset="2">
-                <div class="vertical-center">
-                  <div class="center">
-                    <img
-                      src="assets/img/online-transactions.png"
-                    
-                    />
-                  </div>
-                </div>
-              </ion-col>
-            </ion-row>
-          </ion-grid> -->
-          <ion-item class="ion-no-margin">
-            <ion-grid *ngFor="let x of data">
-              <ion-row>
-                <ion-col size="5"><b>Name:</b> </ion-col>
-                <ion-col size="7"><b>{{x.first_name}} {{x.middle_name}}. {{x.last_name}}</b></ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="5">Hospital Site:</ion-col>
-                <ion-col size="7">{{site}}</ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="5"> Room:</ion-col>
-                <ion-col size="7">{{x.room_no}}</ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="5">Admission Date:</ion-col>
-                <ion-col size="7">{{dateAdmitted}}</ion-col>
-              </ion-row>
-              <!-- <ion-row>
-                <ion-col size="5">Managed this patient for:</ion-col>
-                <ion-col size="7">{{daysManaged}} {{day}}</ion-col>
-              </ion-row> -->
-            </ion-grid>
-          </ion-item>
 
-          <ion-item class="ion-no-margin">
-            <ion-grid>
-              <ion-row>
-                <ion-col size="5">
-                  <b>
-                    <ion-text color="danger">Amount:</ion-text>
-                  </b>
-                </ion-col>
-                <ion-col size="7" color="danger"><b>
-                    <ion-text color="danger">&#8369; {{data1 | number}} {{withVat}}</ion-text>
-                  </b></ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="5">Pay Venue: </ion-col>
-                <ion-col size="7">
-                  <ion-badge>{{payvenueTxt}}</ion-badge>
-                </ion-col>
-              </ion-row>
-              <!-- <ion-row>
-                <ion-col size="5">Add VAT?: </ion-col>
-                <ion-col size="7">{{withVat}}</ion-col>
-              </ion-row> -->
-            </ion-grid>
-          </ion-item>
-
-          <ul *ngIf="payvenueN == 'X' && data1 <= 0">
-            <li class="lineheight-80">
-              <ion-text class="fs-12 ion-text-wrap" color="danger">Amenable to Insurance (HMO) and PhilHealth rates.
-              </ion-text>
-            </li>
-            <li class="lineheight-80  paddingtop-10">
-              <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth </ion-text>
-            </li>
-          </ul>
-          <ul *ngIf="payvenueN == 'X' && data1 > 0">
-            <li class="lineheight-80">
-              <ion-text class="fs-12 ion-text-wrap" color="danger">Insurance (HMO) and PhilHealth coverage
-                applies.</ion-text>
-            </li>
-            <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-              <ion-text class="fs-12 ion-text-wrap" color="danger">Only the excess amount of
-                <b>&#8369;{{data1 | number}}</b> {{withVat}} will be collected from your patient.
-              </ion-text>
-            </li>
-            <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-              <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth +
-                <b>&#8369;{{data1 | number}}</b> {{withVat}}
-              </ion-text>
-            </li>
-            <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
-              <ion-text class="fs-12 ion-text-wrap" color="danger">Only the excess amount of
-                <b>&#8369;{{data1 | number}}</b> will be collected from your patient.
-              </ion-text>
-            </li>
-            <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
-              <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth +
-                <b>&#8369;{{data1 | number}}</b>
-              </ion-text>
-            </li>
-            <li class="lineheight-80  paddingtop-10">
-              <ion-text class="fs-12 ion-text-wrap" color="danger">Please note that actual receivable amount may vary
-                after
-                final computations from Accounting.</ion-text>
-            </li>
-          </ul>
-
-          <ul *ngIf="payvenueN == 'H' && data1 > 0">
-
-            <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-              <ion-text class="fs-12 ion-text-wrap" color="danger">Total amount of <b>&#8369;{{data1 | number}}</b>
-                {{withVat}} will be collected from your patient.</ion-text>
-            </li>
-            <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-              <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: <b>&#8369;{{data1 | number}}</b>
-                {{withVat}} + PhilHealth</ion-text>
-            </li>
-            <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
-              <ion-text class="fs-12 ion-text-wrap" color="danger">Total amount of <b>&#8369;{{data1 | number}}</b> will
-                be collected from your patient.</ion-text>
-            </li>
-            <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
-              <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: <b>&#8369;{{data1 | number}}</b> +
-                PhilHealth
-              </ion-text>
-            </li>
-            <li class="lineheight-80  paddingtop-10">
-              <ion-text class="fs-12 ion-text-wrap" color="danger">Please note that actual receivable amount may vary
-                after final computations from Accounting. </ion-text>
-            </li>
-          </ul>
-
-
-          <ul *ngIf="payvenueN == 'W'">
-            <li class="lineheight-80">
-              <ion-text class="fs-12 ion-text-wrap" color="danger">Amenable to PhilHealth rates.</ion-text>
-            </li>
-            <li class="lineheight-80  paddingtop-10">
-              <ion-text class="fs-12 ion-text-wrap" color="danger">Receivable: PhilHealth </ion-text>
-            </li>
-          </ul>
-          <ul *ngIf="payvenueN == 'N'">
-            <li class="lineheight-80">
-              <ion-text class="fs-12 ion-text-wrap" color="danger">Patient was not seen so no professional fee will be
-                collected from this patient.</ion-text>
-            </li>
-          </ul>
-          <ul *ngIf="payvenueN == 'A'">
-            <li class="lineheight-80">
-              <ion-text class="fs-12 ion-text-wrap" color="danger">As an insurance coordinator you will receive a
-                coordinator's fee.</ion-text>
-            </li>
-            <li class="lineheight-80">
-              <ion-text class="fs-12 ion-text-wrap" color="danger">No professional fee will be collected from this
-                patient.</ion-text>
-            </li>
-          </ul>
-          <ul *ngIf="payvenueN == 'xyz'">
-            <li class="lineheight-80">
-              <ion-text class="fs-12 ion-text-wrap" color="danger">Receivable: PhilHealth (if patient is a member)
-              </ion-text>
-            </li>
-          </ul>
+          <pfSummaryPxInfo [data]="data" [site]="site" [is_pwd]="is_pwd" [is_senior]="is_senior"
+            [dateAdmitted]="dateAdmitted" [data1]="data1" [withVat]="withVat" [payvenueTxt]="payvenueTxt">
+          </pfSummaryPxInfo>
+          <pfsummary [payvenueN]="payvenueN" [data1]="data1" [withVatN]="withVatN"></pfsummary>
           <ion-button color="mango" size="default" expand="block" shape="round" class="buttonActive"
             (click)="modifyProfFee()" *ngIf="ifShowSummary" [disabled]="modifybtn">Modify</ion-button>
         </div>
+        <!--
 
+
+  ______           _    _____ _                      _____                                            
+ |  ____|         | |  / ____| |                    / ____|                                           
+ | |__   _ __   __| | | (___ | |__   _____      __ | (___  _   _ _ __ ___  _ __ ___   __ _ _ __ _   _ 
+ |  __| | '_ \ / _` |  \___ \| '_ \ / _ \ \ /\ / /  \___ \| | | | '_ ` _ \| '_ ` _ \ / _` | '__| | | |
+ | |____| | | | (_| |  ____) | | | | (_) \ V  V /   ____) | |_| | | | | | | | | | | | (_| | |  | |_| |
+ |______|_| |_|\__,_| |_____/|_| |_|\___/ \_/\_/   |_____/ \__,_|_| |_| |_|_| |_| |_|\__,_|_|   \__, |
+                                                                                                 __/ |
+                                                                                                |___/ 
+
+
+-->
         <div *ngIf="ifShowSummary == false">
           <ion-card mode="ios">
             <ion-item lines="none">
