removed redundant texts on approval

--- a/src/app/chh-web-components/professional-fee-summary-patient-info/professional-fee-summary-patient-info.component.html
+++ b/src/app/chh-web-components/professional-fee-summary-patient-info/professional-fee-summary-patient-info.component.html
@@ -44,7 +44,7 @@
     </ion-chip>
   </ion-grid>
 </ion-item>
-<ion-item class="ion-no-margin" *ngIf="moreOrLess">
+<ion-item class="ion-no-margin" *ngIf="moreOrLess" style="font-size: 14px !important;">
   <ion-grid *ngFor="let x of data">
     <ion-row>
       <ion-col size="5"><b>Name:</b> </ion-col>
