made final diagnosis in inbox font special, made executive dashboard modal lower

--- a/src/app/pages/doctors-information/inbox/inbox.page.html
+++ b/src/app/pages/doctors-information/inbox/inbox.page.html
@@ -88,7 +88,8 @@
                 </ion-item>
                 <ion-item>
 
-                  <ion-text [innerHTML]="x.final_diagnosis" class="ion-text-wrap" style="font-size: 14px;"></ion-text>
+                  <ion-text [innerHTML]="x.final_diagnosis" class="ion-text-wrap custom-font" style="font-size: 14px;">
+                  </ion-text>
                 </ion-item>
 
               </ion-list>
