added sign signature

--- a/src/app/pages/doctors-information/inbox/inbox.page.html
+++ b/src/app/pages/doctors-information/inbox/inbox.page.html
@@ -96,11 +96,12 @@
               <ion-footer>
                 <ion-row>
                   <ion-col>
-
+                    <ion-button size="small" color="mango" shape="round" expand="block" (click)="viewCerticate(x)">
+                      View Medical Certificate</ion-button>
                   </ion-col>
                   <ion-col>
-                    <ion-button size="small" color="mango" shape="round" expand="block" (click)="presentActionSheet(x)">
-                      Approve</ion-button>
+                    <!--ion-button size="small" color="mango" shape="round" expand="block" (click)="presentActionSheet(x)">
+                      Approve</ion-button-->
                   </ion-col>
                 </ion-row>
               </ion-footer>
