--- a/src/app/pages/doctors-information/medical-certificate/medical-certificate.page.html
+++ b/src/app/pages/doctors-information/medical-certificate/medical-certificate.page.html
@@ -60,7 +60,7 @@
                         </ion-col>
                       </ion-row>
                     </ion-grid>
-                    <!--img src='{{ signatureImg }}' /-->
+                    <img src='{{ signatureImg }}' />
                   </div>
                 </div>
               </ion-content>
